force-app/main/default/objects/Topic_Progress__c/Topic_Progress__c.object-meta.xml
<CustomObject>
    <label>Topic Progress</label>
    <nameField>
        <label>Topic Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topic Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>