force-app/main/default/objects/Topic_Progress__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Topic Progresses</relationshipLabel>
    <relationshipName>Topic_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>