force-app/main/default/objects/Topic_Progress__c/fields/Topic_Progress_Key__c.field-meta.xml
<CustomField>
    <fullName>Topic_Progress_Key__c</fullName>
    <externalId>true</externalId>
    <label>Topic Progress Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>