force-app/main/default/objects/Topic_Progress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>User__c</columns>
    <columns>Topic__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>